# docs/swagger.yaml
@@ -22,6 +22,50 @@ definitions:
       status:
         type: string
     type: object
+  model.MemoCreateRequest:
+    properties:
+      content:
+        maxLength: 255
+        minLength: 2
+        type: string
+    type: object
+  model.MemoDeleteRequest:
+    properties:
+      id:
+        type: integer
+    type: object
+  model.MemoItem:
+    properties:
+      content:
+        type: string
+      id:
+        type: integer
+    type: object
+  model.MemoListResponse:
+    properties:
+      memoes:
+        items:
+          $ref: '#/definitions/model.MemoItem'
+        type: array
+      message:
+        type: string
+      status:
+        type: string
+    type: object
+  model.MemoUpdateRequest:
+    properties:
+      content:
+        type: string
+      id:
+        type: integer
+    type: object
+  model.SimpleResponse:
+    properties:
+      message:
+        type: string
+      status:
+        type: string
+    type: object
   model.VideoItem:
     properties:
       image:
@@ -60,6 +104,108 @@ info:
   title: 个人主页
   version: "1.0"
 paths:
+  /memo/create:
+    post:
+      consumes:
+      - application/json
+      description: 使用access_token获取视频列表资源
+      parameters:
+      - description: 访问令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 备忘录创建参数
+        in: body
+        name: '{object}'
+        required: true
+        schema:
+          $ref: '#/definitions/model.MemoCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SimpleResponse'
+      summary: 根据内容创建新的备忘录
+      tags:
+      - 备忘录相关接口
+  /memo/delete:
+    delete:
+      consumes:
+      - application/json
+      description: 使用access_token获取视频列表资源
+      parameters:
+      - description: 访问令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 备忘录删除参数
+        in: body
+        name: '{object}'
+        required: true
+        schema:
+          $ref: '#/definitions/model.MemoDeleteRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SimpleResponse'
+      summary: 根据Id删除备忘录
+      tags:
+      - 备忘录相关接口
+  /memo/list:
+    get:
+      consumes:
+      - application/json
+      description: 使用access_token获取视频列表资源
+      parameters:
+      - description: 访问令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.MemoListResponse'
+      summary: 获取备忘录列表资源
+      tags:
+      - 备忘录相关接口
+  /memo/update:
+    put:
+      consumes:
+      - application/json
+      description: 使用access_token获取视频列表资源
+      parameters:
+      - description: 访问令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 备忘录删除参数
+        in: body
+        name: '{object}'
+        required: true
+        schema:
+          $ref: '#/definitions/model.MemoUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.SimpleResponse'
+      summary: 根据Id更新备忘录
+      tags:
+      - 备忘录相关接口
   /user/auth:
     post:
       consumes:
