# model/repository.go
@@ -12,3 +12,18 @@ type User struct {
 	UpdatedAt int64                 `gorm:"autoUpdateTime"`
 	DeletedAt soft_delete.DeletedAt `gorm:"uniqueIndex:udx_name"`
 }
+
+type Memo struct {
+	Id        uint   `gorm:"size:10"`
+	Content   string `gorm:"size:255;not null"`
+	CreatedAt int64  `gorm:"autoCreateTime"`
+	UpdatedAt int64  `gorm:"autoUpdateTime"`
+	DeletedAt soft_delete.DeletedAt
+}
+
+func (m *Memo) ToMemoItem() MemoItem {
+	return MemoItem{
+		Id:      m.Id,
+		Content: m.Content,
+	}
+}
